# m80-106bv-25_lab-2

./: .dockerignore  .gitignore  DOCKER_INSTRUCTIONS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/commands/: __init__.py  cat.py  cd.py  cp.py  ls.py  mv.py  rm.py  zip_tar.py
src/core/: logger.py  parser.py  path_utils.py
tests/: test.py
